--- a/TT-2016-B045/casosUso/Mensajes/mensajes.tex
+++ b/TT-2016-B045/casosUso/Mensajes/mensajes.tex
@@ -1,3 +1,6 @@
+
+\section{Mensajes del sistema}
+
 Mensajes usados en el sistema, que se usan para informar al usuario mediante la interfaz de ciertas situaciones o eventos que ocurren en el prototipo y pueden ser de los siguientes tipos: \\
 \begin{itemize}	
 	\item \textbf{Notificación} : Estos mensajes se utilizan para indicar que la operación solicitada por el usuario se ejecutó correctamente.
@@ -20,7 +23,7 @@ Parámetros más comunes: \\
 	\item[VALOR: ] Es un sustantivo concreto y generalmente se refiere a un valor en especifico.
 \end{description}
 
-\section{Mensajes}
+\subsection{Mensajes}
 
 \begin{Message}{MSG-SLL1}{Generación de llaves} 
 	\MSGitem[Tipo: ] Notificación
