--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -133,15 +133,18 @@
 \cfinput{archivosTex/preliminares}
 
 %------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Análisis y diseño}
+\chapter{Análisis}
 
-\cfinput{archivosTex/analisisydiseno}
+\cfinput{archivosTex/analisis}
+
+%------------------------------------------------------------------------------------------------------------------------------------
+\chapter{Diseño}
+
+\cfinput{archivosTex/diseño}
 \cfinput{casosUso/Servidor/CUSLLIndex}
 \cfinput{casosUso/Nube/CUNIndex}
 \cfinput{casosUso/Cliente/CUCLIndex}
 \newpage
-%------------------------------------------------------------------------------------------------------------------------------------
-\chapter{Mensajes}
 \cfinput{casosUso/Mensajes/mensajes}
 %------------------------------------------------------------------------------------------------------------------------------------
 \appendix
