--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -75,3 +75,127 @@
 			\includegraphics[width=1\textwidth]{images/CasosDeUso}
 		\caption{Diagrama de Casos de Uso del sistema.}
 	\end{figure}
+
+\cfinput{casosUso/Servidor/CUSLLIndex}
+\cfinput{casosUso/Nube/CUNIndex}
+\cfinput{casosUso/Cliente/CUCLIndex}
+\newpage
+%=======================================================================================================================================
+\section{Diagramas de secuencia}
+
+\subsection{Registrar Usuario}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Registrar_usuario}
+		\caption{Diagrama de secuencias de Registrar un usuario nuevo.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_a}
+		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incorrectos.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_b}
+		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
+		\caption{Diagrama de secuencias de Registrar un usuario nuevo con usuario repetido.}
+\end{figure} 
+\newpage
+
+\subsection{Iniciar Sesión}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Iniciar_sesion}
+		\caption{Diagrama de secuencias de Iniciar sesion un usuario.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_a}
+		\caption{Diagrama de secuencias de Inicar sesion un usuario con datos incorrectos.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_b}
+		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
+		\caption{Diagrama de secuencias de  Inicar sesion un usuario con campos vacios.}
+\end{figure} 
+\newpage
+
+\subsection{Subir Archivo}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Subir_Archivo}
+		\caption{Diagrama de secuencias de subir un archivo nuevo.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_a}
+		\caption{Diagrama de secuencias de subir un archivo con carpeta vacia.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_b}
+		\caption{Diagrama de secuencias de subir un archivo incompatible.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_c}
+		\caption{Diagrama de secuencias de subir un archivo existente.}
+\end{figure} 
+\newpage
+
+\subsection{Firma a ciegas}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Firma_ciegas}
+		\caption{Diagrama de secuencias de la firma a ciegas del servidor de llaves.}
+\end{figure} 
+\newpage
+
+\subsection{Descargar Archivo}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Descargar_Archivo}
+		\caption{Diagrama de secuencias de descargar un archivo de la nube.}
+\end{figure}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Descargar_aleternativa_a}
+		\caption{Diagrama de secuencias de descargar un archivo de la nube no encontrado.}
+\end{figure} 
+\newpage
+
+\subsection{Eliminar Archivo}
+
+\begin{figure}[htbp!]
+		\centering
+			\includegraphics[width=1\textwidth]{images/Eliminar_Archivo}
+		\caption{Diagrama de secuencias de eliminar un archivo de la nube.}
+\end{figure} 
+\newpage
+
+%=======================================================================================================================================
+\cfinput{casosUso/Mensajes/mensajes}
