--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -59,7 +59,37 @@ R6 & Problemas de planeación & MEDIA & ALTA & ALTO & Falta de comunicación por
 
 %=============================================================================================================================================================
 
+\section{Arquitectura del sistema. }
 
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=12cm]{./images/Paso01.jpg}
+	\caption{Arquitectura del sistema paso 1.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=12cm]{./images/Paso02.jpg}
+	\caption{Arquitectura del sistema paso 2.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=12cm]{./images/Paso03.jpg}
+	\caption{Arquitectura del sistema paso 3.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=12cm]{./images/Paso04.jpg}
+	\caption{Arquitectura del sistema paso 4.}
+
+\end{figure}
+
+%=============================================================================================================================================================
 \section{Descripcion de procesos}
 
 \subsection{Descripción del proceso subir archivo.}
