--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -215,6 +215,28 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \newpage
 %=======================================================================================================================================
+\section{Modelo de entidades. }
+
+\subsection{Diagrama de Entidad Relación. }
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=7cm]{./images/BDTT2.png}
+	\caption{BPMN Eliminar archivo.}
+
+\end{figure} 
+
+\newpage
+
+\subsection{Diagrama de clases. }
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=7cm]{./images/BDTT2.png}
+	\caption{BPMN Eliminar archivo.}
+
+\end{figure} 
+%=======================================================================================================================================
 \section{Requerimientos Funcionales. }
 
 \begin{table}[htb]
