diagrama de clases

--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -63,28 +63,28 @@ R6 & Problemas de planeación & MEDIA & ALTA & ALTO & Falta de comunicación por
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=12cm]{./images/Paso01.jpg}
+	\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
 	\caption{Arquitectura del sistema paso 1.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=12cm]{./images/Paso02.jpg}
+	\includegraphics[width=16cm, height=13cm]{./images/Paso02.jpg}
 	\caption{Arquitectura del sistema paso 2.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=12cm]{./images/Paso03.jpg}
+	\includegraphics[width=16cm, height=10cm]{./images/Paso03.jpg}
 	\caption{Arquitectura del sistema paso 3.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=12cm]{./images/Paso04.jpg}
+	\includegraphics[width=16cm, height=10cm]{./images/Paso04.jpg}
 	\caption{Arquitectura del sistema paso 4.}
 
 \end{figure}
@@ -221,8 +221,8 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=7cm]{./images/BDTT2.png}
-	\caption{BPMN Eliminar archivo.}
+	\includegraphics[width=16cm, height=10cm]{./images/BDTT2.png}
+	\caption{Diagrama Entidad relación del sistema.}
 
 \end{figure} 
 
@@ -232,10 +232,11 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=7cm]{./images/BDTT2.png}
-	\caption{BPMN Eliminar archivo.}
+	\includegraphics[width=18cm, height=15cm]{./images/DiagramaClasesTT.png}
+	\caption{Diagarama de clases del sistema.}
 
 \end{figure} 
+\newpage
 %=======================================================================================================================================
 \section{Requerimientos Funcionales. }
 
